# shull

./: Cargo.toml  README.md  bench.py  ipyhull.py  pyproject.toml
.github/workflows/: CI.yml
examples/: profile_delaunay.rs  profile_parallel.rs
python/shull/: __init__.py  delaunay.py
shull/: __init__.py  delaunay.py
src/: alpha.rs  d2.rs  d4.rs  error.rs  lib.rs  python.rs
src/parallel/: geom.rs  grid.rs  mod.rs  pipeline.rs
tests/: test_alpha.py  test_delaunay2d.py  test_delaunay3d.py  test_parallel.py  test_scipy_compat.py
