[package]
name = "shull"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shull"
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.19"
ndarray = "0.15"
robust = "1"

[dependencies.pyo3]
version = "0.19.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38"]
