[package]
name = "shull"
version = "0.3.0"
edition = "2021"
description = "Fast sweep-hull (S-hull) Delaunay triangulation in 2D and 3D"
license = "GPL-3.0-only"
repository = "https://github.com/schlegelp/shull"
readme = "README.md"
keywords = ["delaunay", "triangulation", "sweep-hull", "geometry", "mesh"]
categories = ["mathematics", "science", "algorithms"]
# Whitelist for the crates.io package: keeps the Python wrapper sources,
# pytest suite and stray working files out. maturin adds pyproject.toml and
# python/ back on top of this list when it builds the PyPI sdist.
include = ["/src/", "/examples/", "/Cargo.toml", "/README.md", "/LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "shull"
crate-type = ["cdylib", "rlib"]

[features]
# Python bindings. Off by default so Rust consumers get a pure-Rust crate
# (no pyo3 build-time Python lookup, no libpython link); maturin turns it
# on via pyproject.toml when building the wheel.
python = ["dep:pyo3", "dep:numpy"]
# Opt-in parallel build (`delaunay2d_par` / `delaunay4d_par`): partitions the
# cloud into spatial blocks triangulated concurrently with rayon. Off by
# default so pure-Rust consumers don't pull in rayon; pyproject.toml enables
# it for every published wheel.
parallel = ["dep:rayon"]

[dependencies]
numpy = { version = "0.29", optional = true }
ndarray = "0.17"
robust = "1"
rayon = { version = "1", optional = true }

[[example]]
name = "profile_parallel"
required-features = ["parallel"]

[dependencies.pyo3]
version = "0.29.0"
optional = true
# "abi3-py310" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.10
features = ["abi3-py310"]
