[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "shull"
description = "Fast sweep-hull (S-hull) Delaunay triangulation in 2D and 3D, implemented in Rust"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Philipp Schlegel", email = "pms70@cam.ac.uk" }]
keywords = ["delaunay", "triangulation", "sweep-hull", "s-hull", "computational-geometry", "mesh"]
requires-python = ">=3.10"
dependencies = ["numpy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "scipy"]

[project.urls]
Repository = "https://github.com/schlegelp/shull"
Issues = "https://github.com/schlegelp/shull/issues"

[tool.maturin]
# Keeping the Python sources under python/ (rather than a top-level shull/
# directory) prevents the source tree from shadowing the installed package
# when running pytest from the repository root.
python-source = "python"
module-name = "shull._shull"
features = ["python", "parallel", "pyo3/extension-module"]
exclude = ["1602.04707v1.pdf", "ipyhull.py", "test.py", "winding_test.py"]